<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_travelfeed"
        android:title="@string/travel_feed"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:id="@+id/nav_add_post"
        android:title="Add Post"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"

        />
    <item
        android:id="@+id/nav_notifitacion"
        android:title="@string/notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        />

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_black_24dp"
        />
    <item
        android:id="@+id/nav_drawer"
        android:title="drawer"
        android:icon="@drawable/ic_reorder_black_24dp"/>
</menu>