<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".LoginActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/signin_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/toolbar_style"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:gravity="center">
        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_note"
            android:textSize="@dimen/_14sdp"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_below="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/phone_container">


                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="bd"
                    app:ccp_showPhoneCode="true"
                    app:ccp_showFullName="false"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccpDialog_showPhoneCode="true"
                    app:ccpDialog_showCloseIcon="true"
                    android:layout_gravity="center_vertical"
                    app:ccp_textSize="18sp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintAnimationEnabled="true"
                    app:errorTextAppearance="@color/red"
                    android:hint="@string/your_phone_number">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signin_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/edit_txt_size"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintAnimationEnabled="true"
                    app:errorTextAppearance="@color/red">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otp_edit_text"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/code"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/edit_txt_size"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:visibility="gone"
                        android:textColor="@color/black"/>



                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:text="60"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:textColor="@color/black"/>
            </LinearLayout>




            <Button
                android:id="@+id/verify_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/get_otp_code"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/btn_txt_size"
                android:background="@drawable/btn_style"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/signin_btn"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/btn_txt_size"
                android:background="@drawable/btn_style"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textStyle="bold"/>


        </LinearLayout>
    </LinearLayout>





</LinearLayout>